--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,25 +2,29 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+ul{
+  list-style: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body, input, p, select, textarea {
+  font-family: "Work Sans", Helvetica, Arial, sans-serif;
+}
+
+h2 {
+  font-family: Poppins, Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+  text-transform: none;
+}
+
+input[type=text], input[type=password], input[type=email], input[type=url], input[type=tel], input[type=date], textarea, select {
+  background-color: #ffffff;
+  color: #555555;
+  border-color: #dce0e0;
 }
