--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,27 +8,38 @@ body {
   margin: 0;
   padding: 0;
 }
-ul{
+ul {
   list-style: none;
 }
 
-body, input, p, select, textarea {
-  font-family: "Work Sans", Helvetica, Arial, sans-serif;
+body,
+input,
+p,
+select,
+textarea {
+  font-family: "Work Sans", Helvetica, Arial, sans-serif !important;
 }
 
-h2 {
-  font-family: Poppins, Helvetica, Arial, sans-serif;
-  font-weight: 700;
+h2, h1, h3 ,h4, h5, h6 {
+  font-family: Poppins, Helvetica, Arial, sans-serif !important;
+  font-weight: 700 !important;
   letter-spacing: 0px;
   text-transform: none;
 }
 
-input[type=text], input[type=password], input[type=email], input[type=url], input[type=tel], input[type=date], textarea, select {
-  background-color: transparent;
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+input[type="tel"],
+input[type="date"],
+textarea,
+select {
   color: #555555;
   border-color: #dce0e0;
 }
 
-input:focus-visible{
+input:focus-visible,
+select:focus-visible {
   outline: none !important;
 }
