--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,3 +56,12 @@ select:focus-visible {
   width: 45px;
 }
 
+#counter{
+  text-align: center;
+  font-size: 16px;
+}
+
+a{
+  text-decoration: none;
+}
+
