--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,4 +64,7 @@ select:focus-visible {
 a{
   text-decoration: none;
 }
+/* .css-1qqsdnr-MuiAutocomplete-root .MuiAutocomplete-input{
+  width: 100% !important
+} */
 
